// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector renders Selector correctly 1`] = `
<WithMooskinContext
  activeItem="/settings"
  className=""
  onClickItem={[MockFunction]}
  style={Object {}}
>
  <Component
    activeItem="/settings"
    className=""
    onClickItem={[MockFunction]}
    palette={
      Object {
        "backgroundColors": Object {
          "background": "#FAFAFA",
          "black": "#000000",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "gray1": "#E0E0E0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "primary1": "#4169E1",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "borderColors": Object {
          "background": "#FAFAFA",
          "black": "#000000",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "gray1": "#E0E0E0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "primary1": "#4169E1",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "fontColors": Object {
          "background": "#FAFAFA",
          "black": "#000000",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "gray1": "#E0E0E0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "primary1": "#4169E1",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "text": "#212121",
          "white": "#FFFFFF",
        },
      }
    }
    style={Object {}}
  >
    <StyledSelector
      activeItem="/settings"
      className=""
      onClickItem={[MockFunction]}
      palette={
        Object {
          "backgroundColors": Object {
            "background": "#FAFAFA",
            "black": "#000000",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "gray1": "#E0E0E0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "primary1": "#4169E1",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "text": "#212121",
            "white": "#FFFFFF",
          },
          "borderColors": Object {
            "background": "#FAFAFA",
            "black": "#000000",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "gray1": "#E0E0E0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "primary1": "#4169E1",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "text": "#212121",
            "white": "#FFFFFF",
          },
          "fontColors": Object {
            "background": "#FAFAFA",
            "black": "#000000",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "gray1": "#E0E0E0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "primary1": "#4169E1",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "text": "#212121",
            "white": "#FFFFFF",
          },
        }
      }
      style={Object {}}
    >
      <Box
        activeItem="/settings"
        className="sc-gtssRu jyxQMQ"
        onClickItem={[MockFunction]}
        palette={
          Object {
            "backgroundColors": Object {
              "background": "#FAFAFA",
              "black": "#000000",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "gray1": "#E0E0E0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "primary1": "#4169E1",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "text": "#212121",
              "white": "#FFFFFF",
            },
            "borderColors": Object {
              "background": "#FAFAFA",
              "black": "#000000",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "gray1": "#E0E0E0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "primary1": "#4169E1",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "text": "#212121",
              "white": "#FFFFFF",
            },
            "fontColors": Object {
              "background": "#FAFAFA",
              "black": "#000000",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "gray1": "#E0E0E0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "primary1": "#4169E1",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "text": "#212121",
              "white": "#FFFFFF",
            },
          }
        }
        style={Object {}}
        transition="0.2s all"
      >
        <Component
          activeItem="/settings"
          className="sc-gtssRu jyxQMQ"
          onClickItem={[MockFunction]}
          palette={
            Object {
              "backgroundColors": Object {
                "background": "#FAFAFA",
                "black": "#000000",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "gray1": "#E0E0E0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "primary1": "#4169E1",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "text": "#212121",
                "white": "#FFFFFF",
              },
              "borderColors": Object {
                "background": "#FAFAFA",
                "black": "#000000",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "gray1": "#E0E0E0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "primary1": "#4169E1",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "text": "#212121",
                "white": "#FFFFFF",
              },
              "fontColors": Object {
                "background": "#FAFAFA",
                "black": "#000000",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "gray1": "#E0E0E0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "primary1": "#4169E1",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "text": "#212121",
                "white": "#FFFFFF",
              },
            }
          }
          style={Object {}}
          transition="0.2s all"
        >
          <StyledBox
            activeItem="/settings"
            className="sc-gtssRu jyxQMQ"
            onClickItem={[MockFunction]}
            palette={
              Object {
                "backgroundColors": Object {
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "gray1": "#E0E0E0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "primary1": "#4169E1",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "text": "#212121",
                  "white": "#FFFFFF",
                },
                "borderColors": Object {
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "gray1": "#E0E0E0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "primary1": "#4169E1",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "text": "#212121",
                  "white": "#FFFFFF",
                },
                "fontColors": Object {
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "gray1": "#E0E0E0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "primary1": "#4169E1",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "text": "#212121",
                  "white": "#FFFFFF",
                },
              }
            }
            style={Object {}}
            transition="0.2s all"
          >
            <div
              className="sc-bdnylx drKdKK sc-gtssRu jyxQMQ"
              onClickItem={[MockFunction]}
              style={Object {}}
            >
              <WithMooskinContext
                active={true}
                className=""
                key="0/.0"
                onClick={[Function]}
                style={Object {}}
                value="/settings"
              >
                <Component
                  active={true}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                      "borderColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                      "fontColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                    }
                  }
                  style={Object {}}
                  value="/settings"
                >
                  <StyledSelectorItem
                    active={true}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                        "borderColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                        "fontColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                      }
                    }
                    style={Object {}}
                    value="/settings"
                  >
                    <Box
                      active={true}
                      className="sc-dlnjPT jEifDT"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                          "borderColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                          "fontColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                        }
                      }
                      style={Object {}}
                      transition="0.2s all"
                      value="/settings"
                    >
                      <Component
                        active={true}
                        className="sc-dlnjPT jEifDT"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                            "borderColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                            "fontColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                          }
                        }
                        style={Object {}}
                        transition="0.2s all"
                        value="/settings"
                      >
                        <StyledBox
                          active={true}
                          className="sc-dlnjPT jEifDT"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                              "borderColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                              "fontColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                            }
                          }
                          style={Object {}}
                          transition="0.2s all"
                          value="/settings"
                        >
                          <div
                            className="sc-bdnylx drKdKK sc-dlnjPT jEifDT"
                            onClick={[Function]}
                            style={Object {}}
                            value="/settings"
                          >
                            Settings
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSelectorItem>
                </Component>
              </WithMooskinContext>
              <WithMooskinContext
                active={false}
                className=""
                key="1/.1"
                onClick={[Function]}
                style={Object {}}
                value="/template"
              >
                <Component
                  active={false}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                      "borderColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                      "fontColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                    }
                  }
                  style={Object {}}
                  value="/template"
                >
                  <StyledSelectorItem
                    active={false}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                        "borderColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                        "fontColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                      }
                    }
                    style={Object {}}
                    value="/template"
                  >
                    <Box
                      active={false}
                      className="sc-dlnjPT DTeCc"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                          "borderColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                          "fontColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                        }
                      }
                      style={Object {}}
                      transition="0.2s all"
                      value="/template"
                    >
                      <Component
                        active={false}
                        className="sc-dlnjPT DTeCc"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                            "borderColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                            "fontColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                          }
                        }
                        style={Object {}}
                        transition="0.2s all"
                        value="/template"
                      >
                        <StyledBox
                          active={false}
                          className="sc-dlnjPT DTeCc"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                              "borderColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                              "fontColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                            }
                          }
                          style={Object {}}
                          transition="0.2s all"
                          value="/template"
                        >
                          <div
                            className="sc-bdnylx drKdKK sc-dlnjPT DTeCc"
                            onClick={[Function]}
                            style={Object {}}
                            value="/template"
                          >
                            Template
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSelectorItem>
                </Component>
              </WithMooskinContext>
              <WithMooskinContext
                active={false}
                className=""
                key="2/.2"
                onClick={[Function]}
                style={Object {}}
                value="/preview"
              >
                <Component
                  active={false}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                      "borderColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                      "fontColors": Object {
                        "background": "#FAFAFA",
                        "black": "#000000",
                        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                        "darkgray1": "#777777",
                        "darkgray2": "#454545",
                        "darkgray3": "#424242",
                        "gray1": "#E0E0E0",
                        "gray2": "#E7E7E7",
                        "grayAlpha": "rgba(0,0,0,0.17)",
                        "medgray1": "#757575",
                        "medgray2": "#888888",
                        "primary1": "#4169E1",
                        "primary2": "#212121",
                        "primary3": "#00796B",
                        "primary4": "#D32F2F",
                        "secondary1": "#2E7D32",
                        "secondary2": "#757575",
                        "secondary3": "#673AB7",
                        "secondary4": "#9C27B0",
                        "secondary5": "#00796B",
                        "secondary6": "#ECF0FC",
                        "text": "#212121",
                        "white": "#FFFFFF",
                      },
                    }
                  }
                  style={Object {}}
                  value="/preview"
                >
                  <StyledSelectorItem
                    active={false}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                        "borderColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                        "fontColors": Object {
                          "background": "#FAFAFA",
                          "black": "#000000",
                          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                          "darkgray1": "#777777",
                          "darkgray2": "#454545",
                          "darkgray3": "#424242",
                          "gray1": "#E0E0E0",
                          "gray2": "#E7E7E7",
                          "grayAlpha": "rgba(0,0,0,0.17)",
                          "medgray1": "#757575",
                          "medgray2": "#888888",
                          "primary1": "#4169E1",
                          "primary2": "#212121",
                          "primary3": "#00796B",
                          "primary4": "#D32F2F",
                          "secondary1": "#2E7D32",
                          "secondary2": "#757575",
                          "secondary3": "#673AB7",
                          "secondary4": "#9C27B0",
                          "secondary5": "#00796B",
                          "secondary6": "#ECF0FC",
                          "text": "#212121",
                          "white": "#FFFFFF",
                        },
                      }
                    }
                    style={Object {}}
                    value="/preview"
                  >
                    <Box
                      active={false}
                      className="sc-dlnjPT DTeCc"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                          "borderColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                          "fontColors": Object {
                            "background": "#FAFAFA",
                            "black": "#000000",
                            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                            "darkgray1": "#777777",
                            "darkgray2": "#454545",
                            "darkgray3": "#424242",
                            "gray1": "#E0E0E0",
                            "gray2": "#E7E7E7",
                            "grayAlpha": "rgba(0,0,0,0.17)",
                            "medgray1": "#757575",
                            "medgray2": "#888888",
                            "primary1": "#4169E1",
                            "primary2": "#212121",
                            "primary3": "#00796B",
                            "primary4": "#D32F2F",
                            "secondary1": "#2E7D32",
                            "secondary2": "#757575",
                            "secondary3": "#673AB7",
                            "secondary4": "#9C27B0",
                            "secondary5": "#00796B",
                            "secondary6": "#ECF0FC",
                            "text": "#212121",
                            "white": "#FFFFFF",
                          },
                        }
                      }
                      style={Object {}}
                      transition="0.2s all"
                      value="/preview"
                    >
                      <Component
                        active={false}
                        className="sc-dlnjPT DTeCc"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                            "borderColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                            "fontColors": Object {
                              "background": "#FAFAFA",
                              "black": "#000000",
                              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                              "darkgray1": "#777777",
                              "darkgray2": "#454545",
                              "darkgray3": "#424242",
                              "gray1": "#E0E0E0",
                              "gray2": "#E7E7E7",
                              "grayAlpha": "rgba(0,0,0,0.17)",
                              "medgray1": "#757575",
                              "medgray2": "#888888",
                              "primary1": "#4169E1",
                              "primary2": "#212121",
                              "primary3": "#00796B",
                              "primary4": "#D32F2F",
                              "secondary1": "#2E7D32",
                              "secondary2": "#757575",
                              "secondary3": "#673AB7",
                              "secondary4": "#9C27B0",
                              "secondary5": "#00796B",
                              "secondary6": "#ECF0FC",
                              "text": "#212121",
                              "white": "#FFFFFF",
                            },
                          }
                        }
                        style={Object {}}
                        transition="0.2s all"
                        value="/preview"
                      >
                        <StyledBox
                          active={false}
                          className="sc-dlnjPT DTeCc"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                              "borderColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                              "fontColors": Object {
                                "background": "#FAFAFA",
                                "black": "#000000",
                                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                                "darkgray1": "#777777",
                                "darkgray2": "#454545",
                                "darkgray3": "#424242",
                                "gray1": "#E0E0E0",
                                "gray2": "#E7E7E7",
                                "grayAlpha": "rgba(0,0,0,0.17)",
                                "medgray1": "#757575",
                                "medgray2": "#888888",
                                "primary1": "#4169E1",
                                "primary2": "#212121",
                                "primary3": "#00796B",
                                "primary4": "#D32F2F",
                                "secondary1": "#2E7D32",
                                "secondary2": "#757575",
                                "secondary3": "#673AB7",
                                "secondary4": "#9C27B0",
                                "secondary5": "#00796B",
                                "secondary6": "#ECF0FC",
                                "text": "#212121",
                                "white": "#FFFFFF",
                              },
                            }
                          }
                          style={Object {}}
                          transition="0.2s all"
                          value="/preview"
                        >
                          <div
                            className="sc-bdnylx drKdKK sc-dlnjPT DTeCc"
                            onClick={[Function]}
                            style={Object {}}
                            value="/preview"
                          >
                            Preview
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSelectorItem>
                </Component>
              </WithMooskinContext>
            </div>
          </StyledBox>
        </Component>
      </Box>
    </StyledSelector>
  </Component>
</WithMooskinContext>
`;

exports[`Selector renders SelectorItem correctly 1`] = `
<WithMooskinContext
  active={true}
  className="myClass"
  onClick={[MockFunction]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  <Component
    active={true}
    className="myClass"
    onClick={[MockFunction]}
    palette={
      Object {
        "backgroundColors": Object {
          "background": "#FAFAFA",
          "black": "#000000",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "gray1": "#E0E0E0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "primary1": "#4169E1",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "borderColors": Object {
          "background": "#FAFAFA",
          "black": "#000000",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "gray1": "#E0E0E0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "primary1": "#4169E1",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "fontColors": Object {
          "background": "#FAFAFA",
          "black": "#000000",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "gray1": "#E0E0E0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "primary1": "#4169E1",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "text": "#212121",
          "white": "#FFFFFF",
        },
      }
    }
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <StyledSelectorItem
      active={true}
      className="myClass"
      onClick={[MockFunction]}
      palette={
        Object {
          "backgroundColors": Object {
            "background": "#FAFAFA",
            "black": "#000000",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "gray1": "#E0E0E0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "primary1": "#4169E1",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "text": "#212121",
            "white": "#FFFFFF",
          },
          "borderColors": Object {
            "background": "#FAFAFA",
            "black": "#000000",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "gray1": "#E0E0E0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "primary1": "#4169E1",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "text": "#212121",
            "white": "#FFFFFF",
          },
          "fontColors": Object {
            "background": "#FAFAFA",
            "black": "#000000",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "gray1": "#E0E0E0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "primary1": "#4169E1",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "text": "#212121",
            "white": "#FFFFFF",
          },
        }
      }
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <Box
        active={true}
        className="sc-dlnjPT jEifDT myClass"
        onClick={[MockFunction]}
        palette={
          Object {
            "backgroundColors": Object {
              "background": "#FAFAFA",
              "black": "#000000",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "gray1": "#E0E0E0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "primary1": "#4169E1",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "text": "#212121",
              "white": "#FFFFFF",
            },
            "borderColors": Object {
              "background": "#FAFAFA",
              "black": "#000000",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "gray1": "#E0E0E0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "primary1": "#4169E1",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "text": "#212121",
              "white": "#FFFFFF",
            },
            "fontColors": Object {
              "background": "#FAFAFA",
              "black": "#000000",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "gray1": "#E0E0E0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "primary1": "#4169E1",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "text": "#212121",
              "white": "#FFFFFF",
            },
          }
        }
        style={
          Object {
            "color": "blue",
          }
        }
        transition="0.2s all"
      >
        <Component
          active={true}
          className="sc-dlnjPT jEifDT myClass"
          onClick={[MockFunction]}
          palette={
            Object {
              "backgroundColors": Object {
                "background": "#FAFAFA",
                "black": "#000000",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "gray1": "#E0E0E0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "primary1": "#4169E1",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "text": "#212121",
                "white": "#FFFFFF",
              },
              "borderColors": Object {
                "background": "#FAFAFA",
                "black": "#000000",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "gray1": "#E0E0E0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "primary1": "#4169E1",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "text": "#212121",
                "white": "#FFFFFF",
              },
              "fontColors": Object {
                "background": "#FAFAFA",
                "black": "#000000",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "gray1": "#E0E0E0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "primary1": "#4169E1",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "text": "#212121",
                "white": "#FFFFFF",
              },
            }
          }
          style={
            Object {
              "color": "blue",
            }
          }
          transition="0.2s all"
        >
          <StyledBox
            active={true}
            className="sc-dlnjPT jEifDT myClass"
            onClick={[MockFunction]}
            palette={
              Object {
                "backgroundColors": Object {
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "gray1": "#E0E0E0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "primary1": "#4169E1",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "text": "#212121",
                  "white": "#FFFFFF",
                },
                "borderColors": Object {
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "gray1": "#E0E0E0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "primary1": "#4169E1",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "text": "#212121",
                  "white": "#FFFFFF",
                },
                "fontColors": Object {
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "gray1": "#E0E0E0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "primary1": "#4169E1",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "text": "#212121",
                  "white": "#FFFFFF",
                },
              }
            }
            style={
              Object {
                "color": "blue",
              }
            }
            transition="0.2s all"
          >
            <div
              className="sc-bdnylx drKdKK sc-dlnjPT jEifDT myClass"
              onClick={[MockFunction]}
              style={
                Object {
                  "color": "blue",
                }
              }
            />
          </StyledBox>
        </Component>
      </Box>
    </StyledSelectorItem>
  </Component>
</WithMooskinContext>
`;
